<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.choral-lang</groupId>
    <artifactId>futures</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.choral-lang</groupId>
            <artifactId>choral</artifactId>
            <version>0.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.choral-lang</groupId>
            <artifactId>runtime</artifactId>
            <version>0.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.9.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.9.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>choral-epp-hello-roles</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>choral</executable>
                            <arguments>
                                <argument>epp</argument>
                                <argument>--sources=${project.basedir}/src/main/choral</argument>
                                <argument>--headers=${project.basedir}/src/main/choral</argument>
                                <argument>--target=${project.build.directory}/generated-sources/choral</argument>
                                <argument>HelloRoles</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>choral-epp-concurrent-send</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>choral</executable>
                            <arguments>
                                <argument>epp</argument>
                                <argument>--sources=${project.basedir}/src/main/choral</argument>
                                <argument>--headers=${project.basedir}/src/main/choral</argument>
                                <argument>--target=${project.build.directory}/generated-sources/choral</argument>
                                <argument>ConcurrentSend</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>choral-epp-concurrent-producers</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>choral</executable>
                            <arguments>
                                <argument>epp</argument>
                                <argument>--sources=${project.basedir}/src/main/choral</argument>
                                <argument>--headers=${project.basedir}/src/main/choral</argument>
                                <argument>--target=${project.build.directory}/generated-sources/choral</argument>
                                <argument>ConcurrentProducers</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>choral-epp-inorder-producers</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>choral</executable>
                            <arguments>
                                <argument>epp</argument>
                                <argument>--sources=${project.basedir}/src/main/choral</argument>
                                <argument>--headers=${project.basedir}/src/main/choral</argument>
                                <argument>--target=${project.build.directory}/generated-sources/choral</argument>
                                <argument>InOrderProducers</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>choral-epp-concurrent-buyers</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>choral</executable>
                            <arguments>
                                <argument>epp</argument>
                                <argument>--sources=${project.basedir}/src/main/choral</argument>
                                <argument>--headers=${project.basedir}/src/main/choral</argument>
                                <argument>--target=${project.build.directory}/generated-sources/choral</argument>
                                <argument>ConcurrentBuyers</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>choral-epp-simple-timeout</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>choral</executable>
                            <arguments>
                                <argument>epp</argument>
                                <argument>--sources=${project.basedir}/src/main/choral</argument>
                                <argument>--headers=${project.basedir}/src/main/choral</argument>
                                <argument>--target=${project.build.directory}/generated-sources/choral</argument>
                                <argument>SimpleTimeout</argument>
                            </arguments>
                        </configuration>
                    </execution> 
                    <execution>
                        <id>choral-epp-model-serving</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>choral</executable>
                            <arguments>
                                <argument>epp</argument>
                                <argument>--sources=${project.basedir}/src/main/choral</argument>
                                <argument>--headers=${project.basedir}/src/main/choral</argument>
                                <argument>--target=${project.build.directory}/generated-sources/choral</argument>
                                <argument>ModelServing</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${project.build.directory}/generated-sources/choral</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <id>make-uberjar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <finalName>futures-standalone</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                            <attach>false</attach>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
